// juniper.afi_fwd_sandbox is generated by proto_generator as a protobuf
// representation of a YANG schema.
//
// Input schema modules:
//  - afi-common.yang
//  - afi-cos-classifier.yang
//  - afi-counter.yang
//  - afi-decap.yang
//  - afi-discard.yang
//  - afi-encap.yang
//  - afi-filter.yang
//  - afi-fwd-sandbox.yang
//  - afi-indexed-list.yang
//  - afi-indirect.yang
//  - afi-list.yang
//  - afi-match.yang
//  - afi-oam.yang
//  - afi-policer.yang
//  - afi-port.yang
//  - afi-receive.yang
//  - afi-replicate.yang
//  - afi-sample.yang
//  - afi-sandbox.yang
//  - afi-selector.yang
//  - afi-switch.yang
//  - afi-table.yang
//  - afi-tree-entry.yang
//  - afi-tree.yang
//  - afi-types.yang
//  - afi.yang
syntax = "proto3";

package juniper.afi_fwd_sandbox;

import "ywrapper/ywrapper.proto";
import "yext/yext.proto";

message FwdSandbox {
  message InputPort {
    ywrapper.StringValue port_name = 146084661;
  }
  message InputPortKey {
    uint64 port_index = 1;
    InputPort input_port = 2;
  }
  message OutputPort {
    ywrapper.StringValue port_name = 463812234;
  }
  message OutputPortKey {
    uint64 port_index = 1;
    OutputPort output_port = 2;
  }
  repeated InputPortKey input_port = 74510687;
  repeated OutputPortKey output_port = 90683676;
  ywrapper.StringValue sandbox_name = 66102704;
}
